# aix

./: .env.example  .gitignore  LICENSE  README.md  aix.db  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  db.py  main.py  models.py  pyproject.toml  schemas.py  setup.py
app/api/: main.py
app/api/routes/: playlist.py  track.py
app/crud/: __init__.py  base_crud.py  playlist.py  track.py
app/db/: base_class.py  db.py  session.py
app/docker/: Dockerfile  init.sql
app/model/: __init__.py  audio_feature.py  audio_features.py  playlist.py  playlist_track.py  track.py  track_metadata.py  track_source.py  user.py
app/providers/: __init__.py  base_provider.py  local.py  metadata_reader.py  registry.py
app/routers/: playlist.py
app/schema/: parsed_track.py  playlist.py  playlist_track.py  track.py  track_source.py
app/schemas/: playlist.py  track.py
app/services/: local.py  playlist_service.py  youtube.py
app/services/providers/: base.py  youtube_provider.py
docker/: Dockerfile  errors.txt  init.sql
docker/mysql/: init.sql
frontend/: index.html
frontend/src/: App.css  App.jsx  index.css
frontend/src/services/: api.js
migrations/: env.py
mysql/: local.env
static/: index.html  main.js  styles.css
