[tool.poetry]
name = "aix"
version = "0.1.0"
description = "Gestor de playlists"
authors = [
    "Nicolás Martínez González <nicogm977@gmail.com>"
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0"
fastapi = "^0.110"
pydantic = "^2.6"
uvicorn = "^0.40.0"
sqlalchemy = "^2.0.45"
pymysql = "^1.1"
alembic = "^1.18.0"
httpx = "^0.27"
yt-dlp = "^2025.12.8"
cryptography = "^46.0.3"
mutagen = "^1.47.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
