[tool.poetry]
name = "aix"
version = "0.1.0"
description = "Gestor de playlists"
authors = [
    {name = "Nicolás Martínez González",email = "nicogm977@gmail.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.10"
uvicorn = "^0.40.0"
sqlalchemy = "^2.0.45"
alembic = "^1.18.0"
yt-dlp = "^2025.12.8"

requires-python = ">=3.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
